flux/limited-services/upstream-envoy/upstream-api-security.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: upstream-api-authorization-jwt
  namespace: limited-services
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: upstream-api
  jwt:
    optional: false
    providers:
    - name: example
      issuer: https://foo.bar.com
      claimToHeaders:
      - claim: sub
        header: x-jwt-subject
      remoteJWKS:
        uri: https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/examples/kubernetes/jwt/jwks.json
  authorization:
    defaultAction: Deny
    rules:
    - name: "cat"
      action: Allow
      cel: |
        request.method == 'GET' && request.path.startsWith('/chuck/api/random')
    - name: "allow"
      action: Allow
      principal:
        jwt:
          provider: example
          scopes: ["read", "add", "modify"]
          claims:
          - name: user.name
            values: ["John Doe"]
          - name: user.roles
            valueType: StringArray
            values: ["admin"]
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: upstream-api-ratelimit
  namespace: limited-services
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: upstream-api
  rateLimit:
    type: Global
    global:
      rules:
      - limit:
          requests: 10
          unit: Minute
        clientSelectors:
        - headers:
          - name: x-jwt-subject
            type: Distinct
