flux/limited-services/upstream-envoy/upstream-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: upstream-api
  namespace: limited-services
spec:
  hostnames:
    - "kind.418.local"
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: web
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /chuck/api
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: api.chucknorris.io
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /jokes
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: api-upstream
