flux/limited-services/upstream-envoy/upstream-web.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: upstream-web
  namespace: limited-services
spec:
  hostnames:
    - "kind.418.test"
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: web
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /chuck
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: api.chucknorris.io
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: web-upstream
